--- a/.github/workflows/notebook_tests.yaml
+++ b/.github/workflows/notebook_tests.yaml
@@ -32,14 +32,11 @@ jobs:
         run: docker save -o "./ai-lab-$DOCKER_TAG.tar" "exasol/ai-lab:$DOCKER_TAG"
       - name: Export docker image
         run: docker save -o "./ai-lab-$DOCKER_TAG.tar" "exasol/ai-lab:$DOCKER_TAG"
-      - name: Ls
-        run: ls -la
-
       - uses: actions/upload-artifact@v4
         name: Upload ai-lab docker image
         with:
           name: "ai-lab-${{ matrix.wip }}-${{ github.sha }}"
-          path: "./ai-lab-${{ matrix.wip }}-${{ github.sha }}"
+          path: "./ai-lab-${{ matrix.wip }}-${{ github.sha }}.tar"
           compression-level: 9
           retention-days: 1
 
@@ -79,7 +76,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: "ai-lab-${{ matrix.wip }}-${{ github.sha }}"
-          path: "."
+          path: "./ai-lab-${{ matrix.wip }}-${{ github.sha }}.tar"
 
       - name: Load ai-lab image ${{matrix.wip}}
         run: docker load -i "./ai-lab-$DOCKER_TAG.tar"
