--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ localstack = "^4.0.3"
 docker = {version = "^7.1.0", markers = "sys_platform != 'win32'"}
 fabric = "^3.2.2"
 requests = "^2.32.3"
+nox = "^2025.5.1"
 
 [build-system]
 requires = [
