--- a/.github/workflows/notebook_tests.yaml
+++ b/.github/workflows/notebook_tests.yaml
@@ -12,17 +12,17 @@ jobs:
       matrix:
         nb_test:
           - { name: "CSE notebook", test_file: "nbtest_cloud.py", test_backend: "onprem" }
-          - { name: "CSE notebook", test_file: "nbtest_cloud.py", test_backend: "saas" }
+#          - { name: "CSE notebook", test_file: "nbtest_cloud.py", test_backend: "saas" }
           - { name: "sklearn notebook", test_file: "nbtest_sklearn.py", test_backend: "onprem" }
 #          - { name: "sklearn notebook", test_file: "nbtest_sklearn.py", test_backend: "saas" }
           - { name: "ibis notebook", test_file: "nbtest_ibis.py", test_backend: "onprem" }
 #          - { name: "ibis notebook", test_file: "nbtest_ibis.py", test_backend: "saas" }
-#          - { name: "SLC notebook", test_file: "nbtest_script_languages_container.py", test_backend: "onprem" }
-#          - { name: "SME notebooks onprem", test_file: "nbtest_sagemaker.py", test_backend: "onprem" }
+          - { name: "SLC notebook", test_file: "nbtest_script_languages_container.py", test_backend: "onprem" }
+          - { name: "SME notebooks onprem", test_file: "nbtest_sagemaker.py", test_backend: "onprem" }
 #          - { name: "SME notebooks saas", test_file: "nbtest_sagemaker.py", test_backend: "saas" }
-#          - { name: "TE notebooks onprem", test_file: "nbtest_transformers.py", test_backend: "onprem" }
+          - { name: "TE notebooks onprem", test_file: "nbtest_transformers.py", test_backend: "onprem" }
 #          - { name: "TE notebooks saas", test_file: "nbtest_transformers.py", test_backend: "saas"}
-#          - { name: "short notebook tests", test_file: "\"nbtest_environment_test.py nbtest_itde.py\"", test_backend: ""}
+          - { name: "short notebook tests", test_file: "\"nbtest_environment_test.py nbtest_itde.py\"", test_backend: ""}
 #          - { name: "TXAIE notebooks saas", test_file: "nbtest_text_ai.py", test_backend: "saas"}
     name: Running ${{ matrix.nb_test.name }}
     steps:
@@ -51,35 +51,35 @@ jobs:
           NBTEST_TXAIE_ZIP_URL: ${{ vars.TXAIE_ZIP_URL }}
           NBTEST_TXAIE_ZIP_PASSWORD: ${{ secrets.TXAIE_ZIP_PASSWORD }}
           PROJECT_SHORT_TAG: XAIL-NB
-#
-#  notebook_tests-large-runner:
-#    environment: AWS_SAGEMAKER
-#    runs-on:
-#      labels: int-linux-x64-4core-ubuntu24.04-1
-#    strategy:
-#      fail-fast: false
-#      matrix:
-#        nb_test:
-#          - { name: "TXAIE notebooks onprem", test_file: "nbtest_text_ai.py", test_backend: "onprem"}
-#    name: Running ${{ matrix.nb_test.name }}
-#    steps:
-#      - uses: actions/checkout@v4
-#        with:
-#          fetch-depth: 0
-#
-#      - uses: ./.github/actions/prepare_test_env/
-#
-#      - name: Run notebook tests
-#        run: |
-#          poetry run pytest \
-#            --capture=no \
-#            --override-ini=log_cli=true \
-#            --override-ini=log_cli_level=INFO \
-#            --nb-test-backend=${{ matrix.nb_test.test_backend }} \
-#            --nb-test-file=${{ matrix.nb_test.test_file }} \
-#            --nb-test-db-mem-size="8 GiB" \
-#            test/notebook_test_runner/test_notebooks_in_dss_docker_image.py
-#        env:
-#          NBTEST_TXAIE_ZIP_URL: ${{ vars.TXAIE_ZIP_URL }}
-#          NBTEST_TXAIE_ZIP_PASSWORD: ${{ secrets.TXAIE_ZIP_PASSWORD }}
-#          PROJECT_SHORT_TAG: XAIL-NB
+
+  notebook_tests-large-runner:
+    environment: AWS_SAGEMAKER
+    runs-on:
+      labels: int-linux-x64-4core-ubuntu24.04-1
+    strategy:
+      fail-fast: false
+      matrix:
+        nb_test:
+          - { name: "TXAIE notebooks onprem", test_file: "nbtest_text_ai.py", test_backend: "onprem"}
+    name: Running ${{ matrix.nb_test.name }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: ./.github/actions/prepare_test_env/
+
+      - name: Run notebook tests
+        run: |
+          poetry run pytest \
+            --capture=no \
+            --override-ini=log_cli=true \
+            --override-ini=log_cli_level=INFO \
+            --nb-test-backend=${{ matrix.nb_test.test_backend }} \
+            --nb-test-file=${{ matrix.nb_test.test_file }} \
+            --nb-test-db-mem-size="8 GiB" \
+            test/notebook_test_runner/test_notebooks_in_dss_docker_image.py
+        env:
+          NBTEST_TXAIE_ZIP_URL: ${{ vars.TXAIE_ZIP_URL }}
+          NBTEST_TXAIE_ZIP_PASSWORD: ${{ secrets.TXAIE_ZIP_PASSWORD }}
+          PROJECT_SHORT_TAG: XAIL-NB
